grepview: Fix crash on exit with grep dialog open

Thanks to René for the report!

BUG: 348784
FIXED-IN: 5.1.0

Backtrace:
==13831==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000
(pc 0x7f58f2df4f49 bp 0x7ffe3f237920 sp 0x7ffe3f2374a0 T0)
==13831==The signal is caused by a READ memory access.
==13831==Hint: address points to the zero page.
    #0 0x7f58f2df4f48 in GrepDialog::~GrepDialog()
/home/kfunk/devel/src/kf5/kdevplatform-stable/plugins/grepview/grepdialog.cpp:277:55
    #1 0x7f58f2df5b98 in GrepDialog::~GrepDialog()
/home/kfunk/devel/src/kf5/kdevplatform-stable/plugins/grepview/grepdialog.cpp:276:1
    #2 0x7f591bf326cf in QObject::event(QEvent*)
(/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2b36cf)
    #3 0x7f591c88568a in QWidget::event(QEvent*)
(/usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5+0x1a268a)
    #4 0x7f591c83f8ab in QApplicationPrivate::notify_helper(QObject*,
QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5+0x15c8ab)